--- a/personalsite.html
+++ b/personalsite.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="file:///E:/Aakash/photos/personal/20210222160714_IMG_7869.JPG" alt="Aakash's profile Picture">
+      <td> <img src="images/aakash.JPG" alt="Aakash's profile Picture">
       </td>
       <td>
         <h1>Aakash Shinde</h1>
